# test_task

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  config.py  main.py  pyproject.toml
projects/: asgi.py  settings.py  urls.py  wsgi.py
task/: models.py  serializers.py  urls.py  views.py
task/migrations/: 0001_initial.py  0002_alter_person_team.py
